--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^18.2.62",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
+    "axios": "^1.6.7",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
