--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-redux": "^7.1.33",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
+    "date-fns": "^3.5.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
